z-index fixed on service.html

--- a/style1.css
+++ b/style1.css
@@ -660,7 +660,6 @@ h3{
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: -5;
 }
 
 .service-item {
@@ -672,9 +671,7 @@ h3{
   background-color: #ffffff;
   border-radius: 5px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-  z-index: -5;
 }
-
 
 .service-title {
   font-size: 24px;
@@ -720,6 +717,7 @@ h3{
   color: black;
   border: black solid 1px;
   cursor: pointer;
+  z-index: 0;
 }
 
 #modal-overlay {
